feat(sql4j): enhance caching and query capabilities with L2 cache support and aggregation features